--- a/src/AppBundle/Resources/views/Cart/home.html.twig
+++ b/src/AppBundle/Resources/views/Cart/home.html.twig
@@ -181,6 +181,34 @@
                         <div class="row">
                             <a class="btn btn-primary" style="float: right;margin-right: 20px; margin-bottom: 20px;  "
                                href="{{ path('review_order') }}">REVIEW ORDER</a>
+                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal"
+                                    style="float: right;margin-right: 20px; margin-bottom: 20px;">ADD AN UNKNOWN ITEM
+                            </button>
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="myModal" role="dialog">
+                                <div class="modal-dialog modal-lg">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                            <h4 class="modal-title">ADD AN UNKNOWN ITEM</h4>
+                                        </div>
+                                        <div class="modal-body">
+                                            <textarea class="form-control" rows="5" id="comment"> </textarea>
+
+                                            <p style="margin: 22px 0 0px 8px;">Please describe the item in as much
+                                                detail as you can.</p>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-default" data-dismiss="modal">CLOSE
+                                            </button>
+                                            <button type="button" class="btn btn-primary" data-dismiss="modal">ADD TO
+                                                ORDER
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
