Started adding the add an unknown item option on the ordering page.

--- a/src/AppBundle/Resources/views/Cart/home.html.twig
+++ b/src/AppBundle/Resources/views/Cart/home.html.twig
@@ -114,8 +114,35 @@
                     </div>
                     <hr>
                     <div ng-if="numItems == 0">
-                        <div style="padding-bottom: 10px; padding-top: 20px;">
+                        <div style="padding-bottom: 35px; padding-top: 20px;">
                             No products currently in cart.
+                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal2"
+                                    style="float: right;margin-right: 20px; margin-bottom: 20px;">ADD AN UNKNOWN ITEM
+                            </button>
+                        </div>
+                    </div>
+                    <div class="modal fade" id="myModal2" role="dialog">
+                        <div class="modal-dialog modal-lg">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <h4 class="modal-title">ADD AN UNKNOWN ITEM</h4>
+                                </div>
+                                <div class="modal-body">
+                                    <textarea class="form-control" rows="5" id="unknown_item_description2"></textarea>
+
+                                    <p style="margin: 22px 0 0px 8px;">Please describe the item in as much
+                                        detail as you can.</p>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-default" data-dismiss="modal">CLOSE
+                                    </button>
+                                    <button type="button" class="btn btn-primary" data-dismiss="modal"
+                                            ng-click="addUnknownItem2()">ADD TO
+                                        ORDER
+                                    </button>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div ng-if="numItems != 0">
@@ -194,7 +221,8 @@
                                             <h4 class="modal-title">ADD AN UNKNOWN ITEM</h4>
                                         </div>
                                         <div class="modal-body">
-                                            <textarea class="form-control" rows="5" id="comment"> </textarea>
+                                            <textarea class="form-control" rows="5"
+                                                      id="unknown_item_description"></textarea>
 
                                             <p style="margin: 22px 0 0px 8px;">Please describe the item in as much
                                                 detail as you can.</p>
@@ -202,7 +230,8 @@
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-default" data-dismiss="modal">CLOSE
                                             </button>
-                                            <button type="button" class="btn btn-primary" data-dismiss="modal">ADD TO
+                                            <button type="button" class="btn btn-primary" data-dismiss="modal"
+                                                    ng-click="addUnknownItem()">ADD TO
                                                 ORDER
                                             </button>
                                         </div>
@@ -245,7 +274,6 @@
                     </div>
                     <hr>
                     <div class="title" style="padding-bottom: 10px; padding-top: 10px;">
-
                         <table id="part-table" class="responsive nowrap table table-striped no-footer" cellspacing="0"
                                width="100%">
                             <thead>
@@ -394,6 +422,56 @@
 
             $scope.inArray = function (item, array) {
                 return array.indexOf(item);
+            };
+
+            $scope.addUnknownItem = function () {
+                var description = $("#unknown_item_description").val();
+                console.log(description);
+                if (description.length <= 0)
+                    alert('Description cannot be left blank.');
+                else {
+                    $.ajax({
+                        type: 'POST',
+                        url: "{{ path('api_add_unknown_item') }}",
+                        data: {description: description},
+                        dataType: 'json',
+                        success: function (data) {
+                            $scope.$apply(function () {
+                                $scope.cart = data.cart;
+                                $scope.numItems = data.num_items;
+                                console.log($scope.cart);
+
+                            });
+                        }
+                    });
+                    $('#myModal').modal('hide');
+                    $('#myModal2').modal('hide');
+                }
+            };
+
+            $scope.addUnknownItem2 = function () {
+                var description = $("#unknown_item_description2").val();
+                console.log(description);
+                if (description.length <= 0)
+                    alert('Description cannot be left blank.');
+                else {
+                    $.ajax({
+                        type: 'POST',
+                        url: "{{ path('api_add_unknown_item') }}",
+                        data: {description: description},
+                        dataType: 'json',
+                        success: function (data) {
+                            $scope.$apply(function () {
+                                $scope.cart = data.cart;
+                                $scope.numItems = data.num_items;
+                                console.log($scope.cart);
+
+                            });
+                        }
+                    });
+                    $('#myModal').modal('hide');
+                    $('#myModal2').modal('hide');
+                }
             };
 
             $scope.addItem = function (item) {
