--- a/src/AppBundle/Resources/views/Cart/home.html.twig
+++ b/src/AppBundle/Resources/views/Cart/home.html.twig
@@ -333,10 +333,10 @@
     </div>
 
     <!-- The Modal -->
-    <div id="myModal" class="modal" style="display: none;">
+    <div id="image_modal" class="modal" style="display: none;">
 
         <!-- The Close Button -->
-        <span onclick="document.getElementById('myModal').style.display='none'">
+        <span class="close" onclick="document.getElementById('image_modal').style.display='none'">
         <a class="fa fa-times">
         </a>
         </span>
@@ -351,7 +351,14 @@
 
 {% block footer %}
     <script>
-        var modal = document.getElementById('myModal');
+        window.onclick = function (event) {
+            if (event.target == modal) {
+                modal.style.display = "none";
+            }
+        };
+
+
+        var modal = document.getElementById('image_modal');
         var captionText = document.getElementById("caption");
         var modalImg = document.getElementById("img01");
 
@@ -365,20 +372,13 @@
 
         function popup(id) {
             var img = document.getElementById(id + "-img");
-            console.log('matt');
+            console.log(img);
             modal.style.display = "block";
             modalImg.src = img.src;
             modalImg.alt = img.alt;
             captionText.innerHTML = img.alt;
         }
 
-        $("#review_order").click(function (event) {
-            if ($("#shipping").valueOf() == 0) {
-
-            }
-            alert('ldkjf'
-            );
-        });
 
         $(document).ready(function () {
             oTable = $('#part-table').DataTable({
